<resources>
    <string name="app_name">ProyectoPooP2</string>
    <string name="lista_perfiles">Selecciona un Perfil</string>
    <string name="lista_medicinas">Lista de Medicinas</string>
    <string name="lista_doctores">Lista de Doctores</string>
    <string name="lista_actividadFisica">Actividades Fisicas</string>
    <string name="crear_perfil">Crear Perfil</string>
    <string name="ingresar_nombre">Nombre de Usuario</string>
    <string name="ingresar_relacion">Relacion del Usuario</string>
    <string name="ingresar_email">Email (No obligatorio)</string>
    <string name="volver">Volver</string>
    <string name="crear">Crear</string>
    <string name="nombre_faltante">No se ingreso nombre de usuario</string>
    <string name="relacion_faltante">No se ingreso relacion del usuario</string>
    <string name="email_invalido">Ingresa un email valido</string>
    <string name="nombre_relacion_faltante">No se ingreso nombre ni relacion</string>
    <string name="perfil_existente">Este perfil ya existe!</string>
    <string name="perfil_creado">Perfil creado</string>
    <string name="No_se_ingreso_ningun_dato">No se ingreso dato alguno</string>
    <string name="especialidad_faltante">No se ingreso especialidad </string>
    <string name="nombre_faltante_medico">No se ingreso nombre del médico</string>
    <string name="telefono_faltante">No se ingreso telefono del médico</string>
    <string name="direccion_faltante">No se ingreso dirección del médico</string>
    <string name="medico_agregado">Médico agregado</string>
    <string name="medico_existente">Este médico se encuentra registrado!</string>
    <string name="anadir_medicina">Añadir Medicina</string>
    <string name="nombre_faltante_medicina"> Debes ingresar el nombre de la medicina.</string>
    <string name="cantidad_faltante">Especifica la cantidad de la medicina.</string>
    <string name="presentacion_faltante">Selecciona la presentación de la medicina.</string>
    <string name="hora_faltante">Indica la hora de la toma de la medicina.</string>
    <string name="dosis_faltante">Ingresa la dosis correcta de la medicina.</string>
    <string name="medicina_agregado">Medicina guardada.</string>
    <string name="medicina_existente">Medicina Existente</string>
    <string name="dosis_no_valida">La dosis no es válida. Por favor, ingresa una dosis correcta.</string>
    <string name="cantidad_no_valida">La cantidad ingresada no es válida. Por favor, verifica e intenta nuevamente.</string>
    <string name="error_formato_numerico">El formato numérico es incorrecto. Por favor, ingrese un valor válido.</string>
    <string name="actividad_existente">La actividad ya está registrada.</string>
    <string name="actividad_guardada_exito">Actividad guardada con éxito.</string>
    <string name="actividad_faltante">La actividad es requerida.</string>
    <string name="duracion_faltante">La duración es requerida.</string>
    <string name="horario_faltante">El horario es requerido.</string>
    <string name="fecha_faltante">La fecha es requerida.</string>
    <string name="actividad_Fisica_agregada">Actividad física agregada con éxito.</string>
    <string name="actividad_Fisica_existente">La actividad física ya está registrada.</string>

</resources>