<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/volver"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="650dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/volver"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/selecionarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_perfil"
            android:textColor="@color/darkBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingresarUsuario"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:layout_marginTop="50dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/ingresar_nombre"
            android:inputType="text"
            android:textColorHint="@color/blueGray"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingresarRelacion"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:imeOptions="actionDone"
            android:autofillHints="relation"
            android:ems="10"
            android:hint="@string/ingresar_relacion"
            android:inputType="text"
            android:textColorHint="@color/blueGray"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingresarEmail"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:imeOptions="actionDone"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/ingresar_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/blueGray"
            android:textStyle="bold" />

        <Button
            android:id="@+id/crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/crear"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="25dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>